--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <springframework.version>4.0.6.RELEASE</springframework.version>
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -19,6 +22,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${springframework.version}</version>
         </dependency>
 
         <dependency>
