--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,14 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <springframework.version>4.0.6.RELEASE</springframework.version>
-        <spring.security.version>4.0.4.RELEASE</spring.security.version>
+        <springframework.core.version>4.0.6.RELEASE</springframework.core.version>
+        <springframework.security.version>4.0.4.RELEASE</springframework.security.version>
+        <hibernate.core.version>4.3.11.Final</hibernate.core.version>
+        <mysql.connector.java.version>5.1.10</mysql.connector.java.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.3.RELEASE</version>
+        <version>1.4.6.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -28,31 +30,31 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>${springframework.version}</version>
+            <version>${springframework.core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>${spring.security.version}</version>
+            <version>${springframework.security.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>${spring.security.version}</version>
+            <version>${springframework.security.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.11.Final</version>
+            <version>${hibernate.core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.10</version>
+            <version>${mysql.connector.java.version}</version>
         </dependency>
     </dependencies>
 
