--- a/api/pom.xml
+++ b/api/pom.xml
@@ -72,6 +72,14 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-        </plugins>
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>app.SpringBootApp</mainClass>
+				</configuration>
+			</plugin>
+    </plugins>
     </build>
 </project>
