--- a/api/pom.xml
+++ b/api/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.java.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.0.pr3</version>
+        </dependency>
     </dependencies>
 
     <build>
