--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,3 +6,4 @@ hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto = create-drop
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
